fixed z-index

--- a/src/containers/mainPage/styles.module.scss
+++ b/src/containers/mainPage/styles.module.scss
@@ -146,7 +146,7 @@
 
         & > img {
           position: absolute;
-          z-index: 2;
+          z-index: 0;
           top: 0;
           left: 0;
           height: 100%;
@@ -237,13 +237,15 @@
       .left_block {
         width: 40%;
       }
+
       .right_block {
 
         .pc_block {
           display: block;
           top: 50px;
         }
-        .phone_block{
+
+        .phone_block {
           left: 0;
         }
       }
